--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head><title>SP Kronos Sync</title></head>
+  <head><title>SP Schedule Sync</title></head>
   <body>
     <button id="syncButton">Scrape Schedule</button>
     <script src="popup.js"></script>
